// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Group should render disabled state properly 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.c2 {
  user-select: none;
  cursor: not-allowed;
  color: #98A7B7;
}

.c7 {
  user-select: none;
  cursor: not-allowed;
  color: #98A7B7;
  padding: 0 1.6rem;
}

.c4 {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
}

.c3 {
  white-space: initial;
  font-size: 1.4rem;
  line-height: 2.2rem;
  margin-top: 0.3rem;
  margin-bottom: 1.8rem;
  color: #98A7B7;
}

.c11 {
  position: relative;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c11::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  transition: transform 100ms ease-out;
}

.c9 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c9~.c10 {
  border-color: #13181D;
}

.c9~.c10::after {
  background-color: #13181D;
}

.c9:checked~.c10::after {
  transform: translate(-50%,-50%) scale(1);
}

.c9:disabled~.c10 {
  border-color: #98A7B7;
}

.c9:disabled~.c10::after {
  background-color: #98A7B7;
}

.c9:not(:disabled):checked~.c10 {
  border-color: #3872D2;
}

.c9:not(:disabled):checked~.c10::after {
  background-color: #3872D2;
}

.c9:not(:disabled):focus~.c10 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c8 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  flex-grow: 0;
  flex-shrink: 0;
}

.c5 {
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

<div>
  <div
    aria-describedby="gender-helper-text"
    class="c0"
    id="gender-wrapper"
    type="radio"
  >
    <span
      class="c1 c2"
      disabled=""
      id="gender-label"
      textalign="initial"
      textcolor="inherit"
      textvariant="body1"
      textweight="Medium"
      type="radio"
    >
      Gender
    </span>
    <span
      class="c3"
      disabled=""
      id="gender-helper-text"
      type="radio"
    >
      Helper Text
    </span>
    <div
      class="c4"
      columns="1"
      id="gender-options"
    >
      <label
        class="c5"
        disabled=""
        for="Female-gender"
        id="Female-gender-wrapper"
        labelposition="right"
      >
        <span
          class="c6 c7"
          disabled=""
          id="Female-gender-label"
          labelposition="right"
          textalign="initial"
          textcolor="inherit"
          type="radio"
        >
          Female
        </span>
        <div
          class="c8"
        >
          <input
            class="c9"
            disabled=""
            id="Female-gender"
            name="gender"
            type="radio"
            value="female"
          />
          <div
            class="c10 c11"
          />
        </div>
      </label>
      <label
        class="c5"
        disabled=""
        for="Male-gender"
        id="Male-gender-wrapper"
        labelposition="right"
      >
        <span
          class="c6 c7"
          disabled=""
          id="Male-gender-label"
          labelposition="right"
          textalign="initial"
          textcolor="inherit"
          type="radio"
        >
          Male
        </span>
        <div
          class="c8"
        >
          <input
            class="c9"
            disabled=""
            id="Male-gender"
            name="gender"
            type="radio"
            value="male"
          />
          <div
            class="c10 c11"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Radio Group should render properly 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.c2 {
  user-select: none;
  cursor: inherit;
  color: inherit;
}

.c7 {
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c4 {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
}

.c3 {
  white-space: initial;
  font-size: 1.4rem;
  line-height: 2.2rem;
  margin-top: 0.3rem;
  margin-bottom: 1.8rem;
  color: #13181D;
}

.c11 {
  position: relative;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c11::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  transition: transform 100ms ease-out;
}

.c9 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c9~.c10 {
  border-color: #13181D;
}

.c9~.c10::after {
  background-color: #13181D;
}

.c9:checked~.c10::after {
  transform: translate(-50%,-50%) scale(1);
}

.c9:disabled~.c10 {
  border-color: #98A7B7;
}

.c9:disabled~.c10::after {
  background-color: #98A7B7;
}

.c9:not(:disabled):checked~.c10 {
  border-color: #3872D2;
}

.c9:not(:disabled):checked~.c10::after {
  background-color: #3872D2;
}

.c9:not(:disabled):focus~.c10 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c8 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  flex-grow: 0;
  flex-shrink: 0;
}

.c5 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c5:hover .c10 {
  border-color: #3872D2;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c5:active .c10 {
  border-color: #3061B3;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
}

<div>
  <div
    aria-describedby="gender-helper-text"
    class="c0"
    id="gender-wrapper"
    type="radio"
  >
    <span
      class="c1 c2"
      id="gender-label"
      textalign="initial"
      textcolor="inherit"
      textvariant="body1"
      textweight="Medium"
      type="radio"
    >
      Gender
    </span>
    <span
      class="c3"
      id="gender-helper-text"
      type="radio"
    >
      Helper Text
    </span>
    <div
      class="c4"
      columns="1"
      id="gender-options"
    >
      <label
        class="c5"
        for="Female-gender"
        id="Female-gender-wrapper"
        labelposition="right"
      >
        <span
          class="c6 c7"
          id="Female-gender-label"
          labelposition="right"
          textalign="initial"
          textcolor="inherit"
          type="radio"
        >
          Female
        </span>
        <div
          class="c8"
        >
          <input
            class="c9"
            id="Female-gender"
            name="gender"
            type="radio"
            value="female"
          />
          <div
            class="c10 c11"
          />
        </div>
      </label>
      <label
        class="c5"
        for="Male-gender"
        id="Male-gender-wrapper"
        labelposition="right"
      >
        <span
          class="c6 c7"
          id="Male-gender-label"
          labelposition="right"
          textalign="initial"
          textcolor="inherit"
          type="radio"
        >
          Male
        </span>
        <div
          class="c8"
        >
          <input
            class="c9"
            id="Male-gender"
            name="gender"
            type="radio"
            value="male"
          />
          <div
            class="c10 c11"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;
